# OrionEngine2.0

./: .gitignore  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  orion.sln
OrionEngine2.0/: CMakeLists.txt  Project.sln
OrionEngine2.0/OrionEngine2.0.dir/Debug/OrionEngine2.0.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  OrionEngine2.0.lastbuildstate
OrionEngine2.0/include/: Background.h  Camera.h  CollisionMap.h  DecoupledHardwareAbstractionLayer.h  EntityManager.h  EventHandler.h  EventHandlerImpl.h  EventHandlerRead.h  EventHandlerWrite.h  HardwareAbstractionLayer.h  Hitbox.h  InputType.h  Options.h  OptionsLoader.h  Orb.h  OrionEngine2.h  OrionEntity.h  OrionEntityFwd.h  OrionLoop.h  Renderer.h  RendererImpl.h  SDLHandler.h  Timer.h  TimerImpl.h  Wall.h  instanceof.h
OrionEngine2.0/src/: Background.cpp  CMakeLists.txt  Camera.cpp  CollisionMap.cpp  DecoupledHardwareAbstractionLayer.cpp  EntityManager.cpp  EventHandler.cpp  EventHandlerImpl.cpp  EventHandlerRead.cpp  EventHandlerWrite.cpp  Formula.cpp  HardwareAbstractionLayer.cpp  IsPrime.cpp  OptionsLoader.cpp  Orb.cpp  OrionEntity.cpp  OrionLoop.cpp  Renderer.cpp  RendererImpl.cpp  SDLHandler.cpp  Timer.cpp  TimerImpl.cpp  Wall.cpp  main.cpp
OrionEngine2.0/tests/: CMakeLists.txt
OrionEngine2.0/tests/src/: CollisionMapTest.cpp  Formula-test.cpp  SystemTests.cpp  rapidTest.cpp  sample1_unittest.cpp
OrionEngine2.0/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
Testing/Temporary/: CTestCostData.txt
lib/Debug/: gtest_maind.lib
lib/googletest/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  googletest-distribution.sln
lib/googletest/googlemock/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
lib/googletest/googletest/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  (+2 more)
lib/rapidcheck/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  rapidcheck.sln  rapidcheck.vcxproj  rapidcheck.vcxproj.filters  rapidcheckConfig.cmake
src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  orion.vcxproj  orion_lib.vcxproj  orion_lib.vcxproj.filters
tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  orion_tst.vcxproj  orion_tst.vcxproj.filters
(+92 files in other folders)
